--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -6,6 +6,7 @@
     tools:context=".view.CharactersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/characters_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
