--- a/app/src/main/res/navigation/navigation_details.xml
+++ b/app/src/main/res/navigation/navigation_details.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_details">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_details"
+    app:startDestination="@id/detailsActivity">
 
+    <activity
+        android:id="@+id/detailsActivity"
+        android:name="com.fr.iem.marvel.view.DetailsActivity"
+        android:label="fragment_comics_details"
+        tools:layout="@layout/fragment_comics_details" />
 </navigation>
