--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,7 +8,9 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_details"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_comics_details" />
+        tools:layout="@layout/fragment_comics_details"
+        app:navGraph="@navigation/navigation_details"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
