--- a/app/src/main/res/navigation/navigation_details.xml
+++ b/app/src/main/res/navigation/navigation_details.xml
@@ -3,11 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_details"
-    app:startDestination="@id/detailsActivity">
+    app:startDestination="@id/comicsDetailsFragment">
 
+    <fragment
+        android:id="@+id/comicsDetailsFragment"
+        android:name="com.fr.iem.marvel.view.ComicsDetailsFragment"
+        android:label="ComicsDetailsFragment" >
+        <action
+            android:id="@+id/action_comicsDetailsFragment_to_charactersDetailsFragment2"
+            app:destination="@id/charactersDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/charactersDetailsFragment"
+        android:name="com.fr.iem.marvel.view.CharactersDetailsFragment"
+        android:label="CharactersDetailsFragment" >
+        <action
+            android:id="@+id/action_charactersDetailsFragment2_to_comicsDetailsFragment"
+            app:destination="@id/comicsDetailsFragment" />
+    </fragment>
     <activity
         android:id="@+id/detailsActivity"
-        android:name="com.fr.iem.marvel.view.DetailsActivity"
         android:label="fragment_comics_details"
         tools:layout="@layout/fragment_comics_details" />
 </navigation>
