nav and creators

--- a/app/src/main/res/layout/fragment_characters_details.xml
+++ b/app/src/main/res/layout/fragment_characters_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.DetailsActivity">
+    tools:context=".view.CharactersDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -66,23 +66,23 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/list_tv"
+            android:id="@+id/tv_comics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="TextView"
+            android:text="Comics:"
             app:layout_constraintStart_toStartOf="@+id/description"
             app:layout_constraintTop_toBottomOf="@+id/description" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_rv"
+            android:id="@+id/list_comics"
             android:layout_width="0dp"
             android:layout_height="250dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/list_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_comics" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
